--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,1 @@
-# Please put appropriate value
-VITE_API_HOST=http://127.0.0.1:5001
+VITE_API_HOST=https://docsgpt-backend-production.up.railway.app:5001
